fix: align timeline on mobile

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -166,12 +166,12 @@ section {
 #timetable_section > h2::before {
   /* no longer works, not aligned with rest of timeline, fix later */
   content: '';
-  width: 0.1em;
+  width: 0.1rem;
   background: #000;
   position: absolute;
   top: 0;
   bottom: 0;
-  left: 0.2em;
+  left: 1.35rem;
   margin: auto;
 }
 
@@ -179,13 +179,14 @@ section {
   position: relative;
   text-align: center;
   padding: var(--standard-padding);
-  width: 100%;
+  width: 85vw;
 }
 
 #events {
   display: grid;
   grid-template: repeat(4, 1fr) / 2em 1fr;
   gap: 0;
+  width: 85vw;
 }
 
 .event__timeline {
